# ctps-360-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
documentation/: ARCHITECTURE.md  OVERVIEW.md  README.md
parser/: http_parser.c  http_parser.h  request.h  url.c  url.h  url_decode.h
reponses/: response.h  response_builder.h
response/: response_builder.c
router/: handlers.c  handlers.h  router.c  router.h
socket/: connection.c  connection.h
tests/: connection_test.c  connection_test.h  parser_test.c  parser_test.h  response_test.c  response_test.h  router_test.c  router_test.h
tests/fixtures/: requests.h
